--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <section class="text">
         <p>This is the text we want to copy</p>
       </section>
-      <section class="screen"></section>
+      <section class="screen">
+        <button>click here</button>
+      </section>
     </section>
     <script src="script.js"></script>
   </body>
