adding style to box

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       </section>
       <section class="screen"></section>
     </section>
+    <section class="box container">
+      <div class="left"></div>
+      <div class="right"></div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
